--- a/css/styles.css
+++ b/css/styles.css
@@ -761,7 +761,12 @@ input[type='checkbox'] {
 	position: relative;
 	padding-top: 8rem;
 	padding-bottom: 40%;
-	background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../images/header-background.jpg') center center no-repeat;
+	/* background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../images/header-background.jpg') center center no-repeat; */
+	background:linear-gradient(to bottom right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../images/dc1.jpg') center center no-repeat;
+	/* background:  url('../images/dc2.jpg') center center no-repeat; */
+	/* background:linear-gradient(to bottom right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),  url('../images/date-background.jpg') center center no-repeat; */
+
+
 	background-size: cover;
 	text-align: center;
 }
